dodata swagger specifikacija za neke slucajeve
